Add umami to app.html

--- a/src/app.html
+++ b/src/app.html
@@ -4,6 +4,7 @@
 		<meta charset="utf-8" />
 		<link rel="icon" href="%sveltekit.assets%/favicon.png" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
+		<script defer src="https://analytics.philippschuetz.com/script.js" data-website-id="872628d3-439b-4dd8-b0a4-bca60aaf4bd5"></script>
 		%sveltekit.head%
 	</head>
 	<body data-sveltekit-preload-data="hover" class="container">
